fixing visible brs

--- a/app/assets/stylesheets/story.css
+++ b/app/assets/stylesheets/story.css
@@ -12,6 +12,10 @@
 	display: inline-block;
 	position: relative;
 }
+.screen h1 {
+	width: 100%;
+	text-align: center;
+}
 .start {
 	text-align: center;
 	padding: 12px;
